--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,4 +18,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Run tests
-      run: ./test.sh
+      env:
+        NO_FSANITIZE: ${{ runner.os != 'Linux' && '1' || '' }}
+      run: make test -j $(nproc || sysctl -n hw.ncpu)
